  Fixed issue causing changed signal to be called with false argument

Summary:
 AdvanceConfig::changed signal is called with changed=false arguement when QGroupBox::clicked is called with checked=false causing the Apply button to remain disabled.

BUG: 403366

Test Plan:
1. Open SDDM settings
2. Enable auto-login, save and close.
3. Open SDDM settings again
4. Uncheck auto-login

Apply button should now be enabled.
Same steps for Relogin after quit checkbox.

Reviewers: mlaurent

Reviewed By: mlaurent

Subscribers: mlaurent, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D19959

(cherry picked from commit ed3decc06e387217bc1318597ba1e97183d3b9b3)